--- a/HRTools_v2/Resources/Styles/ListView.xaml
+++ b/HRTools_v2/Resources/Styles/ListView.xaml
@@ -401,7 +401,7 @@
                             Orientation="Horizontal"
                                     HorizontalAlignment="Right">
 
-                                <Grid Background="Transparent">
+                                <Grid Background="Transparent" Margin="0 0 5 0">
                                     <materialDesign:PackIcon Kind="InfoCircleOutline" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="DarkSlateGray"/>
                                     <Grid.ToolTip>
 
